impressive-features done

--- a/index.html
+++ b/index.html
@@ -524,6 +524,80 @@
             <div class="accessories-subcell accessories-subcell-add-to-cart">ADD TO CART</div>
           </div>
         </div>
+        <div class="accesories-button-see-more">SEE MORE</div>
+      </section>
+
+      <section class="impressive-features">
+        <div class="scooter-riding">
+          <div class="scooter-riding-image-transparency"></div>
+        </div>
+        <h2 class="impressive-features-header">IMPRESSIVE FEATURES</h2>
+        <div class="impressive-features-field">
+          <div class="impressive-features-cell">
+            <div class="impressive-features-cell-icon">
+              <img src="/images/impressive-features/impressive-features-1.svg" alt="impressive-features-1">
+            </div>
+            <div class="impressive-features-cell-value">10”</div>
+            <div class="impressive-features-cell-description">Pneumatic Tires</div>
+          </div>
+
+          <div class="impressive-features-cell">
+            <div class="impressive-features-cell-icon">
+              <img src="/images/impressive-features/impressive-features-2.svg" alt="impressive-features-2">
+            </div>
+            <div class="impressive-features-cell-value">LED</div>
+            <div class="impressive-features-cell-description">Front LED Lights</div>
+          </div>
+
+          <div class="impressive-features-cell">
+            <div class="impressive-features-cell-icon">
+              <img src="/images/impressive-features/impressive-features-3.svg" alt="impressive-features-3">
+            </div>
+            <div class="impressive-features-cell-value">18.6 mph</div>
+            <div class="impressive-features-cell-description">Max Speed</div>
+          </div>
+
+          <div class="impressive-features-cell">
+            <div class="impressive-features-cell-icon">
+              <img src="/images/impressive-features/impressive-features-4.svg" alt="impressive-features-4">
+            </div>
+            <div class="impressive-features-cell-value">40.4 Miles</div>
+            <div class="impressive-features-cell-description">Max Range</div>
+          </div>
+
+          <div class="impressive-features-cell">
+            <div class="impressive-features-cell-icon">
+              <img src="/images/impressive-features/impressive-features-5.svg" alt="impressive-features-5">
+            </div>
+            <div class="impressive-features-cell-value">20%</div>
+            <div class="impressive-features-cell-description">Hill Grade</div>
+          </div>
+
+          <div class="impressive-features-cell">
+            <div class="impressive-features-cell-icon">
+              <img src="/images/impressive-features/impressive-features-6.svg" alt="impressive-features-6">
+            </div>
+            <div class="impressive-features-cell-value">IPX5</div>
+            <div class="impressive-features-cell-description">Water-Resistant</div>
+          </div>
+
+          <div class="impressive-features-cell">
+            <div class="impressive-features-cell-icon">
+              <img src="/images/impressive-features/impressive-features-7.svg" alt="impressive-features-7">
+            </div>
+            <div class="impressive-features-cell-value">6H</div>
+            <div class="impressive-features-cell-description">Fast Charging</div>
+          </div>
+
+          <div class="impressive-features-cell">
+            <div class="impressive-features-cell-icon">
+              <img src="/images/impressive-features/impressive-features-8.svg" alt="impressive-features-8">
+            </div>
+            <div class="impressive-features-cell-value">551Wh</div>
+            <div class="impressive-features-cell-description">Battery</div>
+          </div>
+        </div>
+        <div class="features"></div>
       </section>
     </main>
   </div>
