some midnight changing

--- a/index.html
+++ b/index.html
@@ -599,7 +599,91 @@
         </div>
         <div class="features"></div>
       </section>
+
+<!-- незавершенная секция -->
+      <section class="kickscooter-overview">
+        <h2 class="kickscooter-overview-header">
+          KickScooter overview SEGWAY Ninebot Kickscooter MAX
+        </h2>
+
+        <div class="kickscooter-overview-image">
+
+        </div>
+      </section>
+
+      <section class="smart-bms">
+        <h2 class="smart-bms-header">
+          Smart battery Management system (Smart-BMS)
+        </h2>
+
+        <p class="smart-bms-description">
+          The Smart-BMS closely monitors the battery status with multiple protection mechanisms to ensure the battery durability
+        </p>
+
+        <div class="smart-bms-blur-filter"></div>
+      </section>
+
+      <section class="dual-braking-system">
+        <h2 class="dual-braking-system-header">
+          Dual braking system
+        </h2>
+
+        <p class="dual-braking-system-description">
+          Simultaneous mechanical front drum brake and regenerative electric back brake provide both stability and steerability. <br><br> *IPX5 water resistance
+        </p>
+      </section>
+
+      <section class="led-light">
+        <h2 class="led-light-header">
+          Built-In Front LED Light
+        </h2>
+
+        <p class="led-light-description">
+          Front-facing lights are designed with 2.5w high-brightness LED light to illuminate the path ahead of you and increase your visibility to others around you.
+        </p>
+
+        <p class="led-light-disclaimer">
+          *Disclaimer: for your safety, please try not to ride at night
+        </p>
+
+        <div class="led-light-blur-filter"></div>
+      </section>
+      
+      <section class="folding-mechanism">
+        <h2 class="folding-mechanism-header">
+          One-step Folding Mechanism
+        </h2>
+
+        <p class="folding-mechanism-description">
+          Ninebot KickScooter MAX can be easily folded and carried around in 3 seconds.
+        </p>
+
+        <div class="folding-mechanism-image">
+          <img src="/images/folding-mechanism/folding-mechanism-image.png" alt="folding-mechanism-image">
+        </div>
+      </section>
+
+      <section class="regenerative-brake">
+        <h2 class="regenerative-brake-header">
+          Regenerative Brake for Power Recycle
+        </h2>
+
+        <p class="regenerative-brake-description">
+          The innovative regenerative brake system turns Ninebot KickScooter MAX into an electric vehicle powered by electricity and recycled energy from riding. Energy will be collected from regenerative braking and distributed when you need a boost.
+        </p>
+
+        <div class="regenerative-brake-blur-filter"></div>
+      </section>
+      <section class="fast-charging">
+        <h2 class="fast-charging-header">
+          Easy One Cord Fast Charging
+        </h2>
+
+        <p class="fast-charging-description">
+          The built-in charger lets riders recharge it easily when on the go without having to carry along a bulky charging adapter. 3A fast charge will give Ninebot KickScooter MAX a full charge in 6 hours.
+        </p>
+      </section>
     </main>
   </div>
 </body>
-</html>>
+</html>
