some more midnight changes

--- a/index.html
+++ b/index.html
@@ -674,6 +674,7 @@
 
         <div class="regenerative-brake-blur-filter"></div>
       </section>
+
       <section class="fast-charging">
         <h2 class="fast-charging-header">
           Easy One Cord Fast Charging
@@ -682,6 +683,20 @@
         <p class="fast-charging-description">
           The built-in charger lets riders recharge it easily when on the go without having to carry along a bulky charging adapter. 3A fast charge will give Ninebot KickScooter MAX a full charge in 6 hours.
         </p>
+      </section>
+
+      <section class="riding-modes">
+        <h2 class="riding-modes-header">
+          3 Riding Modes
+        </h2>
+
+        <p class="riding-modes-description">
+          Eco, Standard, and Sports modes can be directly accessed by the intuitive LED dashboard, which also displays maintenance signals, power levels, Bluetooth connectivity and more.
+        </p>
+
+        <div class="riding-modes-blur-filter-left"></div>
+        
+        <div class="riding-modes-blur-filter-right"></div>
       </section>
     </main>
   </div>
