download manual section done

--- a/index.html
+++ b/index.html
@@ -703,24 +703,43 @@
 
       <section class="download-manual">
         <div class="download-manual-container">
-          <div class="download-manual-cell">1</div>
-          <div class="download-manual-cell">2</div>
-          <div class="download-manual-cell">3</div>
-          <div class="download-manual-cell">4</div>
-          <div class="download-manual-cell">5</div>
-          <div class="download-manual-cell">6</div>
-          <div class="download-manual-cell">7</div>
-          <div class="download-manual-cell">8</div>
-          <div class="download-manual-cell">9</div>
-          <div class="download-manual-cell">10</div>
-          <div class="download-manual-cell">11</div>
-          <div class="download-manual-cell">12</div>
-          <div class="download-manual-cell">13</div>
-          <div class="download-manual-cell">14</div>
-          <div class="download-manual-cell">15</div>
+          <div class="download-manual-block">
+            <div class="manual-image">
+              <img src="/images/download-manual/manual-image.png" alt="manual-image">
+            </div>
+          </div>
+          <div class="download-manual-block">
+            <div class="download-manual-block-cell">
+              <h2 class="download-manual-header">DOWNLOAD MANUAL</h2>
+            </div>
+
+            <div class="download-manual-block-cell">
+              <div class="download-manual-block-subcell">
+                <div><img src="/images/download-manual/assembly-icon.svg" alt="assembly-icon"></div>
+                <div>Assembly and <br> preparation for the trip</div>
+              </div>
+
+              <div class="download-manual-block-subcell">
+                <div><img src="/images/download-manual/charge-icon.svg" alt="charge-icon"></div>
+                <div>Assembly and <br> preparation for the trip</div>
+              </div>
+
+              <div class="download-manual-block-subcell">
+                <div><img src="/images/download-manual/ride-icon.svg" alt="ride-icon"></div>
+                <div>Assembly and <br> preparation for the trip</div>
+              </div>
+            </div>
+
+            <div class="download-manual-block-cell download-manual-bottom">
+              <div>
+                DOWNLOAD MANUAL
+              </div>
+              <div>
+                <img src="/images/download-manual/download-manual-icon.svg" alt="download-manual-icon">
+              </div>
+            </div>
+          </div>
         </div>
-
-
       </section>
     </main>
   </div>
