section compare-specifications done

--- a/index.html
+++ b/index.html
@@ -741,6 +741,293 @@
           </div>
         </div>
       </section>
+
+      <section class="compare-specifications">
+        <h2 class="compare-specifications-header">Compare specifications</h2>
+
+        <p class="select-model">Add model to compare</p>
+
+        <div class="compare-table">
+          <div class="compare-table-scooter-image">
+            <img src="/images/compare-specifications/scooter-image-1.png" alt="scooter-image-1">
+          </div>
+          <div class="compare-table-scooter-image">
+            <img src="/images/compare-specifications/scooter-image-2.png" alt="scooter-image-2">
+          </div>
+          <div class="compare-table-scooter-image">
+            <img src="/images/compare-specifications/scooter-image-3.png" alt="scooter-image-3">
+          </div>
+          <div class="compare-table-scooter-image">
+            <img src="/images/compare-specifications/scooter-image-4.png" alt="scooter-image-4">
+          </div>
+          <div class="compare-table-cell-model">NiNinebot <br> Kickscooter E22</div>
+          <div class="compare-table-cell-model">NiNinebot <br> Kickscooter ES1l</div>
+          <div class="compare-table-cell-model">NiNinebot <br> Kickscooter Air T15</div>
+          <div class="compare-table-cell-model">NiNinebot <br> Kickscooter f30</div>
+          <div class="compare-table-subheader">
+            <div class="subheader-container">
+              <div class="subheader-icon">
+                <img src="/images/compare-specifications/max-speed-icon.svg" alt="max-speed-icon">
+              </div>
+              <p class="subheader-description">
+                Max. speed
+              </p>
+              <div class="subheader-line">
+                <img src="/images/compare-specifications/subheader-line.svg" alt="subheader-line">
+              </div>
+            </div>
+          </div>
+
+          <div class="compare-table-cell">20 км/ч</div>
+          <div class="compare-table-cell">20 км/ч</div>
+          <div class="compare-table-cell">20 км/ч</div>
+          <div class="compare-table-cell">25 км/ч</div>
+
+          <div class="compare-table-subheader">
+            <div class="subheader-container">
+              <div class="subheader-icon">
+                <img src="/images/compare-specifications/range-icon.svg" alt="range-icon">
+              </div>
+              <p class="subheader-description">
+                Range (miles)
+              </p>
+              <div class="subheader-line">
+                <img src="/images/compare-specifications/subheader-line.svg" alt="subheader-line">
+              </div>
+            </div>
+          </div>
+
+          <div class="compare-table-cell">22 км</div>
+          <div class="compare-table-cell">20 км</div>
+          <div class="compare-table-cell">12 км</div>
+          <div class="compare-table-cell">30 км</div>
+
+          <div class="compare-table-subheader">
+            <div class="subheader-container">
+              <div class="subheader-icon">
+                <img src="/images/compare-specifications/battery-icon.svg" alt="battery-icon">
+              </div>
+              <p class="subheader-description">
+                Battery Capacity
+              </p>
+              <div class="subheader-line">
+                <img src="/images/compare-specifications/subheader-line.svg" alt="subheader-line">
+              </div>
+            </div>
+          </div>
+
+          <div class="compare-table-cell">5100 mAh</div>
+          <div class="compare-table-cell">184 wAh</div>
+          <div class="compare-table-cell">4000 mAh</div>
+          <div class="compare-table-cell">7650 mAh</div>
+
+          <div class="compare-table-subheader">
+            <div class="subheader-container">
+              <div class="subheader-icon">
+                <img src="/images/compare-specifications/weight-icon.svg" alt="weight-icon">
+              </div>
+              <p class="subheader-description">
+                Net Weight
+              </p>
+              <div class="subheader-line">
+                <img src="/images/compare-specifications/subheader-line.svg" alt="subheader-line">
+              </div>
+            </div>
+          </div>
+
+          <div class="compare-table-cell">13.5 кг</div>
+          <div class="compare-table-cell">10.3 кг</div>
+          <div class="compare-table-cell">10.5 кг</div>
+          <div class="compare-table-cell">15.1 kg</div>
+
+          <div class="compare-table-subheader">
+            <div class="subheader-container">
+              <div class="subheader-icon">
+                <img src="/images/compare-specifications/peyload-icon.svg" alt="peyload-icon">
+              </div>
+              <p class="subheader-description">
+                Payload
+              </p>
+              <div class="subheader-line">
+                <img src="/images/compare-specifications/subheader-line.svg" alt="subheader-line">
+              </div>
+            </div>
+          </div>
+
+          <div class="compare-table-cell">25 кг - 100 кг</div>
+          <div class="compare-table-cell">25 кг - 100 кг</div>
+          <div class="compare-table-cell">30 кг - 100 кг</div>
+          <div class="compare-table-cell">30 кг - 120 кг</div>
+
+          <div class="compare-table-subheader">
+            <div class="subheader-container">
+              <div class="subheader-icon">
+                <img src="/images/compare-specifications/charging-time-icon.svg" alt="charging-time-icon">
+              </div>
+              <p class="subheader-description">
+                Chargin Time
+              </p>
+              <div class="subheader-line">
+                <img src="/images/compare-specifications/subheader-line.svg" alt="subheader-line">
+              </div>
+            </div>
+          </div>
+
+          <div class="compare-table-cell">3.5 часа</div>
+          <div class="compare-table-cell">6 часов</div>
+          <div class="compare-table-cell">4 часа</div>
+          <div class="compare-table-cell">5 часов</div>
+
+          <div class="compare-table-subheader">
+            <div class="subheader-container">
+              <div class="subheader-icon">
+                <img src="/images/compare-specifications/number-of-buttery-icon.svg" alt="number-of-buttery-icon">
+              </div>
+              <p class="subheader-description">
+                Number of Batteries
+              </p>
+              <div class="subheader-line">
+                <img src="/images/compare-specifications/subheader-line.svg" alt="subheader-line">
+              </div>
+            </div>
+          </div>
+
+          <div class="compare-table-cell">1 встроенная</div>
+          <div class="compare-table-cell">1 встроенная</div>
+          <div class="compare-table-cell">1 встроенная</div>
+          <div class="compare-table-cell">1 встроенная</div>
+
+          <div class="compare-table-subheader">
+            <div class="subheader-container">
+              <div class="subheader-icon">
+                <img src="/images/compare-specifications/motor-power-icon.svg" alt="motor-power-icon">
+              </div>
+              <p class="subheader-description">
+                Motor power
+              </p>
+              <div class="subheader-line">
+                <img src="/images/compare-specifications/subheader-line.svg" alt="subheader-line">
+              </div>
+            </div>
+          </div>
+
+          <div class="compare-table-cell">Номинальная 300W</div>
+          <div class="compare-table-cell">Номинальная 250W</div>
+          <div class="compare-table-cell">Номинальная 300W</div>
+          <div class="compare-table-cell">Номинальная 300W</div>
+
+          <div class="compare-table-subheader">
+            <div class="subheader-container">
+              <div class="subheader-icon">
+                <img src="/images/compare-specifications/power-output-icon.svg" alt="power-output-icon">
+              </div>
+              <p class="subheader-description">
+                Power Output
+              </p>
+              <div class="subheader-line">
+                <img src="/images/compare-specifications/subheader-line.svg" alt="subheader-line">
+              </div>
+            </div>
+          </div>
+
+          <div class="compare-table-cell">71W (0.071kW)</div>
+          <div class="compare-table-cell">42W (0.042kW)</div>
+          <div class="compare-table-cell">71W (0.071kW)</div>
+          <div class="compare-table-cell">71W (0.070kW)</div>
+
+          <div class="compare-table-subheader">
+            <div class="subheader-container">
+              <div class="subheader-icon">
+                <img src="/images/compare-specifications/max-incline-icon.svg" alt="max-incline-icon">
+              </div>
+              <p class="subheader-description">
+                Max. Incline
+              </p>
+              <div class="subheader-line">
+                <img src="/images/compare-specifications/subheader-line.svg" alt="subheader-line">
+              </div>
+            </div>
+          </div>
+
+          <div class="compare-table-cell">15%</div>
+          <div class="compare-table-cell">7%</div>
+          <div class="compare-table-cell">15%</div>
+          <div class="compare-table-cell">15%</div>
+
+          <div class="compare-table-subheader">
+            <div class="subheader-container">
+              <div class="subheader-icon">
+                <img src="/images/compare-specifications/shock-absorption-icon.svg" alt="shock-absorption-icon">
+              </div>
+              <p class="subheader-description">
+                Shock Absorption
+              </p>
+              <div class="subheader-line">
+                <img src="/images/compare-specifications/subheader-line.svg" alt="subheader-line">
+              </div>
+            </div>
+          </div>
+
+          <div class="compare-table-cell">----</div>
+          <div class="compare-table-cell">Передняя</div>
+          <div class="compare-table-cell">----</div>
+          <div class="compare-table-cell">----</div>
+
+          <div class="compare-table-subheader">
+            <div class="subheader-container">
+              <div class="subheader-icon">
+                <img src="/images/compare-specifications/safety-icon.svg" alt="safety-icon">
+              </div>
+              <p class="subheader-description">
+                Safety
+              </p>
+              <div class="subheader-line">
+                <img src="/images/compare-specifications/subheader-line.svg" alt="subheader-line">
+              </div>
+            </div>
+          </div>
+
+          <div class="compare-table-cell">Задний LED-фонарь</div>
+          <div class="compare-table-cell">----</div>
+          <div class="compare-table-cell">Задний LED-фонарь</div>
+          <div class="compare-table-cell">Задний LED-фонарь</div>
+
+          <div class="compare-table-subheader">
+            <div class="subheader-container">
+              <div class="subheader-icon">
+                <img src="/images/compare-specifications/armosphere-light-icon.svg" alt="armosphere-light-icon">
+              </div>
+              <p class="subheader-description">
+                Atmosphere Light
+              </p>
+              <div class="subheader-line">
+                <img src="/images/compare-specifications/subheader-line.svg" alt="subheader-line">
+              </div>
+            </div>
+          </div>
+
+          <div class="compare-table-cell">----</div>
+          <div class="compare-table-cell">----</div>
+          <div class="compare-table-cell">----</div>
+          <div class="compare-table-cell">----</div>
+          <div class="compare-table-cell-price">$599.99</div>
+          <div class="compare-table-cell-price">$389.99</div>
+          <div class="compare-table-cell-price">$819.99</div>
+          <div class="compare-table-cell-price">$649.99</div>
+          <div class="compare-table-cell-buy-button">BUY IT NOW</div>
+          <div class="compare-table-cell-buy-button">BUY IT NOW</div>
+          <div class="compare-table-cell-buy-button">BUY IT NOW</div>
+          <div class="compare-table-cell-buy-button">BUY IT NOW</div>
+        </div>
+
+        <div class="compare-specifications-gradient"></div>
+
+        <div class="button-right">
+          <img src="/images/compare-specifications/bottom-right.svg" alt="bottom-right">
+        </div>
+      </section>
+
+      <section class="bottom-space"></section>
     </main>
   </div>
 </body>
