section reviews done

--- a/index.html
+++ b/index.html
@@ -1027,6 +1027,50 @@
         </div>
       </section>
 
+      <section class="gift">
+        <div class="gift-container">
+          <div class="protective-gear-set-image">
+            <img src="/images/gift/protective-gear-set-image.png" alt="protective-gear-set-image">
+          </div>
+          <div class="gift-offer">
+            <h2 class="gift-header">
+              Segway Protective Gear Set as a gift
+            </h2>
+            <p class="gift-description">
+              The cost of a protection kit when buying<br>a scooter is $ 0 instead of $ $29.99
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="reviews">
+        <h2 class="reviews-header">
+          Reviews
+        </h2>
+        <div class="reviews-container">
+          <div class="review">
+            <img src="/images/reviews/review-imag-1.png" alt="review-imag-1">
+          </div>
+
+          <div class="review">
+            <img src="/images/reviews/review-imag-2.png" alt="review-imag-2">
+          </div>
+
+          <div class="review">
+            <img src="/images/reviews/review-imag-3.png" alt="review-imag-3">
+          </div>
+
+          <div class="reviews-left-button">
+            <img src="images/reviews/reviews-left-button.svg" alt="reviews-left-button">
+          </div>
+  
+          <div class="reviews-right-button">
+            <img src="/images/reviews/reviews-right-button.svg" alt="reviews-right-button">
+          </div>
+        </div>
+
+      </section>
+
       <section class="bottom-space"></section>
     </main>
   </div>
