smart-control section done

--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,61 @@
             <img src="/images/reviews/reviews-right-button.svg" alt="reviews-right-button">
           </div>
         </div>
+      </section>
 
+      <section class="smart-control">
+        <h2 class="smart-control-header">
+          Control from your smartphone
+        </h2>
+
+        <p class="smart-control-description">
+          You can easily control your Segway electric scooter with your smartphone via Bluetooth. Not being the key to the kickscooter, it will give a signal in case of an attempt to steal. Check the current speed, data on the status of the device's systems or set the speed limit with a few touches. <br>And the skating training program is indispensable for beginners.
+        </p>
+
+        <div class="smart-control-container">
+          <div class="smart-control-container-column"></div>
+          
+          <div class="smart-control-container-column">
+            <div class="smart-control-container-subcolumn-icon">
+              <div class="smart-control-container-cell">
+                <img src="/images/smart-control/smart-comtrol-cell-image-1.png" alt="smart-comtrol-cell-image-1">
+              </div>
+  
+              <div class="smart-control-container-cell">
+                <img src="/images/smart-control/smart-comtrol-cell-image-2.png" alt="smart-comtrol-cell-image-2">
+              </div>
+              
+              <div class="smart-control-container-cell">
+                <img src="/images/smart-control/smart-comtrol-cell-image-3.png" alt="smart-comtrol-cell-image-3">
+              </div>
+  
+              <div class="smart-control-container-cell">
+                <img src="/images/smart-control/smart-comtrol-cell-image-4.png" alt="smart-comtrol-cell-image-4">
+              </div>
+  
+              <div class="smart-control-container-cell">
+                <img src="/images/smart-control/smart-comtrol-cell-image-5.png" alt="smart-comtrol-cell-image-5">
+              </div>
+  
+              <div class="smart-control-container-cell">
+                <img src="/images/smart-control/smart-comtrol-cell-image-6.png" alt="smart-comtrol-cell-image-6">
+              </div>
+            </div>
+
+            <div class="smart-control-container-subcolumn-pay">
+              <div class="smart-control-container-cell">
+                <img src="/images/smart-control/smart-comtrol-cell-image-7.png" alt="smart-comtrol-cell-image-7">
+              </div>
+
+              <div class="smart-control-container-cell">
+                <img src="/images/smart-control/smart-comtrol-cell-image-8.png" alt="smart-comtrol-cell-image-8">
+              </div>
+            </div>
+          </div>
+          <div class="smart-control-container-column">
+            <img src="/images/smart-control/smart-comtrol-smartphone-image.png" alt="smart-comtrol-smartphone-image">
+          </div>
+        </div>
       </section>
 
       <section class="bottom-space"></section>
