section other models done

--- a/index.html
+++ b/index.html
@@ -1256,6 +1256,141 @@
         </div>
       </section>
 
+      <section class="other-models">
+        <h2 class="other-models-header">
+          OTHER MODELS
+        </h2>
+
+        <p class="other-models-description">
+          Check out the entire line of Segway scooters
+        </p>
+
+        <div class="other-models-container">
+          <div class="other-models-cell">
+            <div class="other-models-subcell-image">
+              <img src="images/other-models/other-models-image-1.png" alt="other-models-image-1">
+            </div>
+            <div class="other-models-subcell-model">
+              KS E22
+            </div>
+            <div class="other-models-subcell-price">
+              $899.99
+            </div>
+            <div class="other-models-subcell-more-button">
+              SEE MORE
+            </div>
+          </div>
+
+          <div class="other-models-cell">
+            <div class="other-models-subcell-image">
+              <img src="images/other-models/other-models-image-1.png" alt="other-models-image-1">
+            </div>
+            <div class="other-models-subcell-model">
+              KS E22
+            </div>
+            <div class="other-models-subcell-price">
+              $899.99
+            </div>
+            <div class="other-models-subcell-more-button">
+              SEE MORE
+            </div>
+          </div>
+
+          <div class="other-models-cell">
+            <div class="other-models-subcell-image">
+              <img src="images/other-models/other-models-image-1.png" alt="other-models-image-1">
+            </div>
+            <div class="other-models-subcell-model">
+              KS E22
+            </div>
+            <div class="other-models-subcell-price">
+              $899.99
+            </div>
+            <div class="other-models-subcell-more-button">
+              SEE MORE
+            </div>
+          </div>
+
+          <div class="other-models-cell">
+            <div class="other-models-subcell-image">
+              <img src="images/other-models/other-models-image-1.png" alt="other-models-image-1">
+            </div>
+            <div class="other-models-subcell-model">
+              KS E22
+            </div>
+            <div class="other-models-subcell-price">
+              $899.99
+            </div>
+            <div class="other-models-subcell-more-button">
+              SEE MORE
+            </div>
+          </div>
+
+          <div class="other-models-cell">
+            <div class="other-models-subcell-image">
+              <img src="images/other-models/other-models-image-1.png" alt="other-models-image-1">
+            </div>
+            <div class="other-models-subcell-model">
+              KS E22
+            </div>
+            <div class="other-models-subcell-price">
+              $899.99
+            </div>
+            <div class="other-models-subcell-more-button">
+              SEE MORE
+            </div>
+          </div>
+
+          <div class="other-models-cell">
+            <div class="other-models-subcell-image">
+              <img src="images/other-models/other-models-image-1.png" alt="other-models-image-1">
+            </div>
+            <div class="other-models-subcell-model">
+              KS E22
+            </div>
+            <div class="other-models-subcell-price">
+              $899.99
+            </div>
+            <div class="other-models-subcell-more-button">
+              SEE MORE
+            </div>
+          </div>
+
+          <div class="other-models-cell">
+            <div class="other-models-subcell-image">
+              <img src="images/other-models/other-models-image-1.png" alt="other-models-image-1">
+            </div>
+            <div class="other-models-subcell-model">
+              KS E22
+            </div>
+            <div class="other-models-subcell-price">
+              $899.99
+            </div>
+            <div class="other-models-subcell-more-button">
+              SEE MORE
+            </div>
+          </div>
+
+          <div class="other-models-cell question-cell">
+            <div class="other-models-subcell-question">
+              DIDN'T FIND A MODEL?
+            </div>
+            <div class="other-models-subcell-description">
+              Leave your contact details <br>and we will help you with <br>the choice
+            </div>
+            <div class="other-models-subcell-contacts">
+              <input type="text" name="mobileNumber" id="mobileNumber" placeholder="+7(_ _)_ _ _  _ _  _ _" required>
+            </div>
+            <div class="other-models-subcell-name">
+              <input type="text" name="name" id="name" placeholder="____________________" required>
+            </div>
+            <div class="other-models-subcell-send">
+              <button type="submit">SEND</button>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <section class="bottom-space"></section>
     </main>
   </div>
