--- a/index.html
+++ b/index.html
@@ -1390,9 +1390,34 @@
           </div>
         </div>
       </section>
-
-      <section class="bottom-space"></section>
     </main>
+
+    <footer class="footer">
+      <div class="footer-logo">
+        <img src="/images/footer/footer-logo.svg" alt="footer-logo">
+      </div>
+
+      <div class="footer-name">
+        <div class="footer-firstname">
+          <img src="/images/footer/footer-firstname.svg" alt="footer-firstname">
+        </div>
+        <div class="footer-secondname">
+          <img src="/images/footer/footer-secondname.svg" alt="footer-secondname">
+        </div>
+      </div>
+
+      <p class="footer-phone">
+        +1 (888) 777-77-77
+      </p>
+
+      <p class="footer-address">
+        2637 Fairfax Ave Culver City, CA 90232
+      </p>
+
+      <p class="footer-fullname">
+        Segway  California © 2017
+      </p>
+    </footer>
   </div>
 </body>
 </html>
